--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,9 @@
-@import './utils/variables';
+// @import './utils/variables';
 
 /* no es necesario poner _ ni la extensión */
 @import './components/header';
 @import './components/main';
 @import './components/nav';
 @import './components/product';
+
+@import './views/app'
