--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,6 @@
 $primary-color: rgb(11, 179, 11);
 $secondary-color: rgb(1, 90, 1);
-$third-color: blue;
+$third-color: rgb(255, 255, 255);
 
 
 $fonnt-size-default: 15px;
